--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,11 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# docker
+docker-compose.yaml
+/docker/pgadmin
+/docker/postgres/pgdata
+
+# db
+/src/migrations
